--- a/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebarBrand.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebarBrand.razor.css
@@ -22,7 +22,3 @@ a {
 	color: var(--hx-sidebar-brand-name-color);
 	font-weight: var(--hx-sidebar-brand-name-font-weight);
 }
-
-.collapsed .hx-sidebar-brand-name {
-	display: none;
-}
